# bf-rs

./: Cargo.toml  README.md
benches/: bf_benchmark.rs
src/: debug.rs  error.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  parser.rs
src/interpreter/: error.rs  interpreter.rs  mod.rs
src/lexer/: lexer.rs  mod.rs  tokens.rs
src/optimizer/: mod.rs  optimization_rule.rs  optimizer.rs  rules.rs
src/optimizer/rules/: byte_adjustment.rs  clear_loop.rs  mod.rs  pointer_adjustment.rs
src/parser/: error.rs  mod.rs  ops.rs  parser.rs
